<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bar_bg"
    tools:context=".CallSettingActivity">

    <TextView
        android:id="@+id/tvEmergencyCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/strEmergencyCall"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv119"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:hint="@string/strNumber119"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tvEmergencyCall"
        app:layout_constraintTop_toBottomOf="@+id/tvEmergencyCall" />

    <Button
        android:id="@+id/btSetting119"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/strSetting119"
        app:layout_constraintStart_toStartOf="@+id/tv119"
        app:layout_constraintTop_toBottomOf="@+id/tv119" />

    <Button
        android:id="@+id/btContact119"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/strContact119"
        app:layout_constraintStart_toEndOf="@+id/btSetting119"
        app:layout_constraintTop_toBottomOf="@+id/tv119" />

    <TextView
        android:id="@+id/tv112"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:hint="@string/strNumber112"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/btSetting119"
        app:layout_constraintTop_toBottomOf="@+id/btSetting119" />

    <Button
        android:id="@+id/btSetting112"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/strSetting112"
        app:layout_constraintStart_toStartOf="@+id/tv112"
        app:layout_constraintTop_toBottomOf="@+id/tv112" />

    <Button
        android:id="@+id/btContact112"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/strContact112"
        app:layout_constraintStart_toEndOf="@+id/btSetting112"
        app:layout_constraintTop_toBottomOf="@+id/tv112" />
</androidx.constraintlayout.widget.ConstraintLayout>