<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccidentActivity">

    <TextView
        android:id="@+id/tvAccidentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:text="@string/strAccidentInfo"
        android:textColor="@color/bar_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAccident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/back_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccidentTitle">

        <TextView
            android:id="@+id/tvAccidentDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/strMainRecentDefault"
            android:textColor="@color/bar_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGPSAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/strAccidentAddress"
            android:textColor="@color/bar_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAccidentDetail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llRecent"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clAccident">

        <Space
            android:id="@+id/spLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <LinearLayout
            android:id="@+id/llFront"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15"
                android:text="@string/strRecentFront"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/ivFront"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="90"
                android:baselineAlignBottom="false"
                android:clickable="true"
                app:srcCompat="@drawable/kmucrc_logo" />
        </LinearLayout>

        <Space
            android:id="@+id/spCenter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5" />

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15"
                android:text="@string/strRecentBack"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="90"
                android:clickable="true"
                app:srcCompat="@drawable/kmucrc_logo" />
        </LinearLayout>

        <Space
            android:id="@+id/spRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>