<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_Driving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/strDriving"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_Driving_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@android:string/ok"
        app:layout_constraintStart_toEndOf="@+id/tv_Driving"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_Driving_1"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Driving" />

    <EditText
        android:id="@+id/et_Driving_2"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Driving_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_Driving" />

    <EditText
        android:id="@+id/et_Driving_3"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Driving_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_Driving" />

    <EditText
        android:id="@+id/et_Driving_4"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Driving_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_Driving" />

    <EditText
        android:id="@+id/et_Driving_5"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Driving_4"
        app:layout_constraintTop_toBottomOf="@+id/tv_Driving" />

    <EditText
        android:id="@+id/et_Driving_6"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Driving_5"
        app:layout_constraintTop_toBottomOf="@+id/tv_Driving" />

    <ImageView
        android:id="@+id/iv_line1"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Driving_1" />

    <TextView
        android:id="@+id/tv_Front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/strFrontCam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_line1" />

    <Button
        android:id="@+id/bt_Front_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@android:string/ok"
        app:layout_constraintStart_toEndOf="@+id/tv_Front"
        app:layout_constraintTop_toBottomOf="@id/iv_line1" />

    <EditText
        android:id="@+id/et_Front_1"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Front" />

    <EditText
        android:id="@+id/et_Front_2"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Front_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_Front" />

    <EditText
        android:id="@+id/et_Front_3"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Front_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_Front" />

    <EditText
        android:id="@+id/et_Front_4"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Front_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_Front" />

    <EditText
        android:id="@+id/et_Front_5"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Front_4"
        app:layout_constraintTop_toBottomOf="@+id/tv_Front" />

    <EditText
        android:id="@+id/et_Front_6"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Front_5"
        app:layout_constraintTop_toBottomOf="@+id/tv_Front" />



    <ImageView
        android:id="@+id/iv_line2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Front_1" />


    <TextView
        android:id="@+id/tv_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/strBackCam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_line2" />

    <Button
        android:id="@+id/bt_Back_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@android:string/ok"
        app:layout_constraintStart_toEndOf="@+id/tv_Front"
        app:layout_constraintTop_toBottomOf="@id/iv_line2" />

    <EditText
        android:id="@+id/et_Back_1"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Back" />

    <EditText
        android:id="@+id/et_Back_2"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Back_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_Back" />

    <EditText
        android:id="@+id/et_Back_3"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Back_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_Back" />

    <EditText
        android:id="@+id/et_Back_4"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Back_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_Back" />

    <EditText
        android:id="@+id/et_Back_5"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Back_4"
        app:layout_constraintTop_toBottomOf="@+id/tv_Back" />

    <EditText
        android:id="@+id/et_Back_6"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="2"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/et_Back_5"
        app:layout_constraintTop_toBottomOf="@+id/tv_Back" />


    <ImageView
        android:id="@+id/iv_line3"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Back_1" />

    <TextView
        android:id="@+id/tv_Wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/strWiFi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_line3" />

    <Button
        android:id="@+id/bt_Wifi_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@android:string/ok"
        app:layout_constraintStart_toEndOf="@+id/tv_Wifi"
        app:layout_constraintTop_toBottomOf="@id/iv_line3" />

    <EditText
        android:id="@+id/et_Wifi_1"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="3"
        android:text="192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Wifi" />

    <EditText
        android:id="@+id/et_Wifi_2"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="3"
        android:text="168"
        app:layout_constraintStart_toEndOf="@+id/et_Wifi_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_Wifi" />

    <EditText
        android:id="@+id/et_Wifi_3"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="3"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/et_Wifi_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_Wifi" />

    <EditText
        android:id="@+id/et_Wifi_4"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="3"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/et_Wifi_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_Wifi" />

    <EditText
        android:id="@+id/et_Wifi_5"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="4"
        android:text="80"
        app:layout_constraintStart_toEndOf="@+id/et_Wifi_4"
        app:layout_constraintTop_toBottomOf="@+id/tv_Wifi" />

    <Button
        android:id="@+id/bt_Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/strReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Wifi_1" />
</androidx.constraintlayout.widget.ConstraintLayout>